# python-intermediate-rivercatchment

./: .gitignore  LICENSE  README.md  catchment-analysis.py  general.ipynb  locar-analysis.py  pyproject.toml  requirements.txt  tutorial.py
.github/workflows/: main.yml
catchment/: __init__.py  compute_data.py  models.py  views.py
data/: LOCAR_Site_Information.csv  README.md  rain_data_2015-12.csv  rain_data_2015-12.json  rain_data_2015-12.xml  rain_data_small.csv  rain_data_small.json  river_data_2015-12.csv  river_data_2015-12.json
data/river_catchments/: frome_piddle_catchment.dbf  frome_piddle_catchment.shp  frome_piddle_catchment.shx  pang_lambourn_catchment.dbf  pang_lambourn_catchment.shp  pang_lambourn_catchment.shx  tern_catchment.dbf  tern_catchment.shp  tern_catchment.shx
data/simple_shapefile/: simple.dbf  simple.shp
locar/: models.py
tests/: test_compute_data.py  test_models.py  test_site.py
